# Real-time

./: .cproject  .project  config
Client/: client  client.c  makefile  makefile~
Debug/: Real-time-project  makefile
Debug/src/: Real-time-project.d  semafors.d  server_signals.d  subdir.mk
Server/: CMakeLists.txt  README.md  Real-time-project
Server/Debug/: Real-time-project
Server/Debug/src/: Globals.d  MessageQ.d  connection.d  main.d  our_GET.d  setup_configrations.d  sharedMemory.d  subdir.mk  worker.d
Server/headers/: MessageQ.h  connection.h  our_GET.h  semafors.h  server_signals.h  setup_configrations.h  sharedMemory.h  worker.h
Server/serverpath/: error404.html  index.html
Server/src/: Globals.c  MessageQ.c  Real-time-project  config  connection.c  main.c  our_GET.c  semafors.c  server_signals.c  sharedMemory.c  worker.c
headers/: Globals.h  our_GET.h  semafors.h  server_signals.h  worker.h
serverpath/: error404.html
src/: Real-time-project.c  connection.c  main.c  our_GET.c  semafors.c  server_signals.c  setup_configrations.c  worker.c
